gpu instance deployed: gemma-2b-it

--- a/deploy/kubernetes/base/kustomization.yaml
+++ b/deploy/kubernetes/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - namespace.yaml
 - service-account.yaml
 - vllm-deployment.yaml
+- vllm-gemma-deployment.yaml
 
 commonLabels:
   project: inf4rag
